adicionado link GitHub

--- a/treinamento.html
+++ b/treinamento.html
@@ -18,7 +18,7 @@
                     <ul>
                         <li><a href="https://www.linkedin.com/in/fernando-massayuki-nakauti-39228919b/"> Linkedin</a></li> 
                         <li><a href="https://www.google.com/">Google</a></li>
-                        <li><a href="https://www.youtube.com/watch?v=Y-xLlZgng_o&pp=ygUUbGV2aSB2cyBiZWFzdCB0aXRhbiA%3D">Youtube</a></li>
+                        <li><a href="https://github.com/proferssor1995">Github</a></li>
                     </ul>
                 </nav>
             </div>
