acrescentado contato, preenchimento, etc

--- a/treinamento.html
+++ b/treinamento.html
@@ -17,7 +17,7 @@
                 <nav>
                     <ul>
                         <li><a href="https://www.linkedin.com/in/fernando-massayuki-nakauti-39228919b/"> Linkedin</a></li> 
-                        <li><a href="https://www.google.com/">Google</a></li>
+                        <li><a href="contato.html">Contato</a></li>
                         <li><a href="https://github.com/proferssor1995">Github</a></li>
                     </ul>
                 </nav>
@@ -41,6 +41,7 @@
             <ul>
                 <li class="itens">Professor de Educação Física</li>
                 <li class="itens">Designer Gráfico</li>
+                <li class="itens">Língua Japonesa</li>
             </ul>
             
         </div>
@@ -79,7 +80,7 @@
                             <img src="winning eleven 10.jpg" alt="Imagem 3">
                             <div class="gif-overlay gif3"></div>
                           </div>
-                        <p class="descricao-de-jogo"> é uma série de jogos eletrônicos de simulação de futebol desenvolvido e publicado pela Konami desde 1995. </p>
+                        <p class="descricao-de-jogo"> Winning Eleven é uma série de jogos eletrônicos de simulação de futebol desenvolvido e publicado pela Konami desde 1995. </p>
                         <p class="tipo-de-jogo">Futebol</p>
                     </li>
 
