--- a/contato.html
+++ b/contato.html
@@ -33,10 +33,10 @@
 					<input type="text" id="nomesobrenome" class="input-padrao"required placeholder="seu nome">
 
 					<label for="email" class="descricao">Email</label>
-					<input type="text" id="email" class="input-padrao"required placeholder="seuemail@.com">
+					<input type="email" id="email" class="input-padrao"required placeholder="seuemail@.com">
 
 					<label for="telefone" class="descricao">Telefone</label>
-					<input type="text" id="telefone" class="input-padrao"required placeholder="(xx)00000-0000">
+					<input type="tel" id="telefone" class="input-padrao"required placeholder="(xx)00000-0000">
 
 					<label for="mensagem" class="descricao">Mensagem</label>
 					<textarea cols="70" rows="10" id="mensagem" placeholder="Escreva seu comentário...."> </textarea>
@@ -64,7 +64,7 @@
 					<label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por email?</label>
 
 
-					<input type="submit" value="Enviar formulário">
+					<input type="submit" value="Enviar formulário" class="enviar">
 				</form>
         	</div>
 			
