adicionado icon no site, etc

--- a/treinamento.html
+++ b/treinamento.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">      <!--"UTF-8' É PARA lingua portuguesa brasileira"-->
         <title> treinamento </title>
         <link rel="stylesheet"  href="treinamento.css">
+        <link rel="icon" type="image/png" href="sephiroth png.png">
         
     </head>
     
