Acrescentado valor nas imagens e no banner da pagina inicial

--- a/treinamento.html
+++ b/treinamento.html
@@ -14,7 +14,7 @@
             <div class="caixa"> 
             
                 <h1 class="principal">Centro de Treinamento de Front-End</h1>  
-                  <div><img id="banner"     src="sephiroth png.png"></div>
+                  <div><img id="banner" alt="Sephiroth"     src="sephiroth png.png"></div>
                 <nav>
                     <ul>
                         <li><a href="https://www.linkedin.com/in/fernando-massayuki-nakauti-39228919b/"> Linkedin</a></li> 
@@ -57,7 +57,7 @@
                         <div class="image"  style="background-image: url(street fighter 2.jpg"></div>
                         <h3>Street Fighter II</h3>
                         <div class="image-container">
-                            <img src="street fighter 2.jpg" alt="Imagem 1">
+                            <img src="street fighter 2.jpg" alt="Street Fighter II">
                             <div class="gif-overlay gif1"></div>
                           </div>
                         <p class="descricao-de-jogo">Street Fighter, é uma série de jogos de luta desenvolvida pela fabricante japonesa de jogos eletrônicos Capcom.</p>
@@ -68,7 +68,7 @@
                     <li class="image-item">
                         <h3>Far Cry 1</h3>
                         <div class="image-container">
-                            <img src="FarCry 1.jpg" alt="Imagem 2">
+                            <img src="FarCry 1.jpg" alt="Far Cry 1">
                             <div class="gif-overlay gif2"></div>
                           </div>
                         <p class="descricao-de-jogo">Far Cry é um jogo de tiro em primeira pessoa de 2004 desenvolvido pela Crytek e publicado pela Ubisoft.</p>
@@ -78,7 +78,7 @@
                     <li class="image-item">
                         <h3>Winning Eleven</h3>
                         <div class="image-container">
-                            <img src="winning eleven 10.jpg" alt="Imagem 3">
+                            <img src="winning eleven 10.jpg" alt="Winning Eleven 10">
                             <div class="gif-overlay gif3"></div>
                           </div>
                         <p class="descricao-de-jogo"> Winning Eleven é uma série de jogos eletrônicos de simulação de futebol desenvolvido e publicado pela Konami desde 1995. </p>
@@ -88,7 +88,7 @@
                     <li class="image-item">
                         <h3>Smash Bros</h3>
                         <div class="image-container">
-                            <img src="smash bros.jpg" alt="image 4">
+                            <img src="smash bros.jpg" alt="SMash Bros">
                             <div class="gif-overlay gif4"></div>
                         <p class="descricao-de-jogo">Super Smash Bros. é uma série de jogos de luta e ação com crossovers, na qual o jogador controla os personagens da franquia de jogos eletrônicos da Nintendo e outras franquias conhecidas, onde se enfrentam em batalhas.</p>
                         <p class="tipo-de-jogo">luta</p>
@@ -97,7 +97,7 @@
                     <li class="image-item">
                         <h3>The Legend of Zelda: Ocarina of Time</h3>
                         <div class="image-container">
-                            <img src="zelda.jpg" alt="image 5">
+                            <img src="zelda.jpg" alt="Legend of the Zelda">
                             <div class="gif-overlay gif5"></div>
                         </div>
                         <p class="descricao-de-jogo">The Legend of Zelda: Ocarina of Time é um jogo eletrônico de ação e aventura desenvolvido e publicado pela Nintendo para o Nintendo 64.</p>
@@ -118,7 +118,7 @@
                                 <div class="image"  style="background-image: url(goleiro.jpg")></div>
                                 <h3>Goleiro de Futebol</h3>
                                 <div class="image-container">
-                                    <img src="goleiro.jpg" alt="Imagem 6">
+                                    <img src="goleiro.jpg" alt="Goleiro">
                                     <div class="gif-overlay gif6"></div>
                                 </div>
                                 <p class="descricao-de-jogo">A função do goleiro é impedir que a bola entre no gol, dando continuação à partida, lançado-a para fora da área ou tirando-a da zona de defesa. </p>
@@ -129,7 +129,7 @@
                             <li class="image-item">
                                 <h3>Natação</h3>
                                 <div class="image-container">
-                                    <img src="natação.jpg" alt="Imagem 7">
+                                    <img src="natação.jpg" alt="Natação">
                                     <div class="gif-overlay gif7"></div>
                                 </div>
                                 <p class="descricao-de-jogo">A natação é a prática de deslocamento na água por meio de movimentos corporais, principalmente com o uso dos braços e pernas.</p>
@@ -139,7 +139,7 @@
                             <li class="image-item">
                                 <h3>Ginástica Laboral</h3>
                                 <div class="image-container">
-                                    <img src="alongamento. jpg.jpg" alt="Imagem 8">
+                                    <img src="alongamento. jpg.jpg" alt="Alongamento">
                                     <div class="gif-overlay gif8"></div>
                                 </div>
                                 <p class="descricao-de-jogo"> É uma série de exercícios de curta duração, entre 10 e 15 minutos, que envolve técnicas de alongamento da cabeça, tronco, membros superiores e inferiores e técnicas de respiração. </p>
